slash-1.0.6, 2000.06.xx
-----------------------

*	search.pl should now properly count rows in resultset so
	the "more left" link at the bottom now works. This code
	was initially removed due to performance reasons.	

*	Fixed bug in search.pl where users could not click back to
	the first page of results using the "xx previous matches"
	link. (Joris Trooster)

*	When performing a user search using search.pl, it will also
	check the fakeemail field, in addition to the nickname.

*	Fix to allow "%" and "#" in URLs for Slash::fixurl()

*	No longer show comments to regular users in submit.pl

slash-1.0.5, 2000.06.13
-----------------------

*	Section articles that appear on main page will now have the
	section part of the titles as a link to that section's index

*	Now shows author comments while viewing the submission as
	opposed to trying to scroll through the small input box in the
	submissions list

*	Fixed bug in comments.pl::commentIndex() which would display
	stories that were 'Never Display' or that had not yet gone
	'live'

*	Added some fixes for Slash::reparentComments()

*	Fixed typo s/an <B>valid/a <B>valid/ in users.pl (David-T)

*	Small edits to logging in slashd, adding logging to a file
	(logs/moderatord.log) in moderatord

*	Added /'s before links in mainmenu block in slashdata_dump.sql
	(David-T)

*	Took form checking code out of .pl files and put into functions
	in Slash.pm:

		insertFormkey:	    inserts new formkey
		checkSubmission:    checks to see if a form submission
				    is valid
		checkTimesPosted:   checks to see if max posts reached
		submittedAlready:   checks to see if a form with a given 
				    formkey has been posted already
		formAbuse:	    logs attempts to fook, break, or
				    flood a particlar form
		formSuccess:	    updates formkeys table with a submit
				    time for a given formkey and
				    increments value to 1 (submitted)

*	Warn user before they try to submit that max submissions has